@@ -1,18 +1,15 @@
 
-ASSEMBLY = mdhost.exe
+ASSEMBLY = $(top_builddir)/build/bin/mdhost.exe
 
 FILES = src/AssemblyInfo.cs \
 src/mdhost.cs
 
-build_sources = $(addprefix $(srcdir)/, $(FILES))
-
 all: $(ASSEMBLY)
 
-REFS = /r:$(top_builddir)/build/bin/MonoDevelop.Core.dll /r:System.Runtime.Remoting
+REFS = -r:$(top_builddir)/build/bin/MonoDevelop.Core.dll /r:System.Runtime.Remoting
 	
 $(ASSEMBLY): $(build_sources)
-	$(CSC) $(CSC_FLAGS) $(build_sources) $(REFS) /out:$(ASSEMBLY) \
-	&& cp $(ASSEMBLY) $(top_builddir)/build/bin/.
+	$(CSC) $(CSC_FLAGS) $(build_sources) $(REFS) -out:$(ASSEMBLY)
 
 assemblydir = $(MD_ASSEMBLY_DIR)
 assembly_DATA = $(ASSEMBLY)           
@@ -20,3 +17,4 @@ assembly_DATA = $(ASSEMBLY)
 CLEANFILES = $(ASSEMBLY) $(ASSEMBLY).mdb
 EXTRA_DIST = $(FILES)
 
+include $(top_srcdir)/Makefile.include
