@@ -1,3 +1,8 @@
+2006-03-24 Lluis Sanchez Gual  <lluis@novell.com>   
+
+	* mdhost.mdp: Updated.
+	* Makefile.am: Use an unified format. Patch by Matze Braun.
+
 2006-02-16  Lluis Sanchez Gual  <lluis@novell.com> 
 
 	* src/mdhost.cs: Preload add-ins required by the provided type.
